<resources>
    <string name="app_name">Happ</string>

    <!-- Labels -->
    <string name="lbOnBoardTitle1">Protege tu salud</string>
    <string name="lbOnBoardDescription1">Controla de forma segura tu exposición para mantenerte saludable y mantener saludable a otros.</string>
    <string name="lbPhraseTermsConditions">Al hacer click en comenzar, %1$s y %2$s</string>
    <string name="lbTermsConditions">aceptas los términos de uso</string>
    <string name="lbPrivacy">política de privacidad</string>
    <string name="lbLoginTitle">Ingresa a tu cuenta</string>
    <string name="lbCreateAccount">¿No tienes cuenta?</string>
    <string name="lbValidateRut">Valida tu rut</string>
    <string name="lbDataPerson">Ingresa tus datos</string>
    <string name="lbDataLive">¿Donde vives?</string>
    <string name="lbDataWork">¿Donde trabajas?</string>
    <string name="lbPermissionTitle">habilita tu bluetooth</string>
    <string name="lbPermissionDescription">Happ registra los contactos con otros usuarios a través de Bluetooth Low Energy para poder informarte en caso de exposición </string>
    <string name="lbBluetooth">Bluetooth</string>
    <string name="lbApprovedRegister">¡Ya puedes comenzar!</string>
    <string name="lbNewRiskScore">Tu nuevo puntaje es</string>
    <string name="lbMyDailyPass">Mi pase diario</string>
    <string name="lbGetDailyPassDesc">Responde las preguntas para actualizar tu riesgo y obtener tu pase diario</string>
    <string name="lbLastCheckTime">Último chequeo %1$s</string>
    <string name="lbPassDuration">Duración pase</string>
    <string name="lbAnswerTriageTitle">Conoce tu riesgo</string>
    <string name="lbAnswerTriageDescription">Responde las siguientes preguntas para obtener tu pase diario</string>
    <string name="lbWithoutTriageTitle">Salgamos adelante juntos</string>
    <string name="lbWithoutTriageDescription">Volver a la normalidad es posible. Con Happ, podremos lograrlo antes y sin renunciar a nuestra privacidad</string>
    <string name="lbChangePassTitle">Cambiar contraseña</string>
    <string name="lbRecoverPassTitle">Recuperar contraseña</string>
    <string name="lbNotiHistoryEmpty">No hay notificaciones</string>
    <string name="lbtriageSuccessDefaultTitle">¡Gracias por responder!</string>
    <string name="lbTriageSuccessDefaultDesc">Vuelve mañana para responder nuevas preguntas que tenemos para ti</string>
    <string name="lbHappBackground">Happ seguirá funcionando en segundo plano, no apagues ni reinicies tu teléfono</string>
    <string name="lbHappDoesNotCollectData">Happ se basa en la tecnología Bluetooth Low Energy y no recopila datos de geolocalización de ningún tipo, incluidos los del GPS. Happ no recopila ningún dato que permita rastrear tu identidad.

</string>

    <!-- Input Text fields -->
    <string name="itRut">Rut</string>
    <string name="itPassword">Contraseña</string>
    <string name="itDocumentNumber">Número documento</string>
    <string name="itName">Nombre</string>
    <string name="itSurname">Apellido</string>
    <string name="itMail">Correo electrónico</string>
    <string name="itRegion">Región</string>
    <string name="itCommune">Comuna</string>
    <string name="itCurrentPass">Contraseña actual</string>
    <string name="itNewPass">Nueva contraseña</string>
    <string name="itRepeatNewPass">Repetir nueva contraseña</string>


    <!-- Buttons -->
    <string name="btnStart">Comenzar</string>
    <string name="btnEnterLogin">Ingresar</string>
    <string name="btnCreateAccount">Registrarme</string>
    <string name="btnNext">Siguiente</string>
    <string name="btnPermissions">Habilitar</string>
    <string name="btnUnderstood">Entendido</string>
    <string name="btnAnswer">Contestar</string>
    <string name="btnGetPass">Obtener pase</string>
    <string name="btnPrivacyPolicies">Políticas de privacidad</string>
    <string name="btnFrequentQuestions">Preguntas frecuentes</string>
    <string name="btnLogOut">Cerrar sesión</string>
    <string name="btnChangePass">Cambiar contraseña</string>
    <string name="btnRecoverPass">Recuperar contraseña</string>
    <string name="btnSend">Enviar</string>

    <!-- Toolbar -->
    <string name="tbLogIn">Iniciar sesión</string>
    <string name="tbCreateAccount">Crear cuenta</string>
    <string name="tbPermissions">Permisos</string>
    <string name="tbTriage">Mi riesgo</string>
    <string name="tbProfile">Mi perfil</string>
    <string name="tbNotifications">Notificaciones</string>
    <string name="tbChangePass">Contraseña</string>
    <string name="tbTermsConditions">Términos de uso</string>
    <string name="tbPrivacy">Políticas de privacidad</string>
    <string name="tbFrequentQuestions">Preguntas frecuentes</string>
    <string name="tbHapp">Happ</string>

    <!-- Notifications -->
    <string name="notiSocialDistancingTitle">Distanciamiento social</string>
    <string name="notiSocialDistancingMessage">Estás rompiendo el distanciamiento, por favor cuídate</string>


    <!-- Bottom Navigation Bar -->
    <string name="navFragmentExposition">Exposición</string>
    <string name="navFragmentHappHome">Happ</string>
    <string name="navFragmentRisk">Mi riesgo</string>
    <string name="navFragmentNotifications">Notificaciones</string>
    <string name="navFragmentProfile">Perfil</string>

    <!-- Errors snackbar -->
    <string name="snkValidateDNI">Validación erronea</string>
    <string name="snkRegisterError">No se pudo realizar el registro</string>
    <string name="snkBluetoothPermissionDenied">Para continuar debe activar el permiso de bluetooth</string>
    <string name="snkLocationPermissionDenied">No tiene activado el permiso de Ubicación</string>
    <string name="snkBluetoothNotAvailable">Bluetooth no disponible en dispositivo</string>
    <string name="snkTriageOnlyOnce">El triage principal solo se puede responder una vez</string>
    <string name="snkDefaultApiError">Falló la comunicación con el servidor</string>
    <string name="snkDataNullError">No se encontraron datos</string>
    <string name="snkChangePassSuccess">Contraseña cambiada con éxito</string>
    <string name="snkTryAgainLater">Ha ocurrido un error, por favor inténtelo más tarde</string>
    <string name="snkMinimumVersion">La versión de android del dispositivo es inferior a la mínima requerida</string>

    <!-- Errors input -->
    <string name="itRutError">Rut inválido</string>
    <string name="itMailError">Correo electrónico inválido</string>
    <string name="itPasswordError">La contraseña debe tener mínimo 6 caracteres</string>
    <string name="itNameError">El nombre debe tener mínimo 3 caracteres</string>
    <string name="itSurNameError">El apellido debe tener mínimo 3 caracteres</string>

    <!-- Errors Sentry -->
    <string name="errSentryUnknownStatus">Estado no registrado en el código (healthCareStatus.triageStatus): %1$s</string>
    <string name="errSentryLoadApiFailedMyRisk">Carga del fragment MyRisk falló (api healthcare). Código error: %1$d</string>
    <string name="errSentryMyRiskLevelNull">My risk, API healthcare trae el campo risk level null</string>
    <string name="errSentryMyRiskResultTypeNull">My risk, API healthcare trae el campo result_type null</string>
    <string name="errSentryUnknownStatusResultType">Estado no registrado en el código (healthCareStatus.result_type): %1$s</string>
    <string name="errSentryLoadApiPingFailure">Servicio Ping falló</string>
    <string name="errSentryLoadApiPingError">Error en servicio Ping. Codigo de error: %1$d</string>
    <string name="errSentryLoadApiPingNull">Servicio Ping - body null</string>

</resources>
