<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <ProgressBar
        android:id="@+id/pbLoogin"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerContentLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvLoginTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/lbLoginTitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itRutLogin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/inputCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/inputCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/inputCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/inputCornerRadius"
                    app:boxStrokeErrorColor="@color/danger"
                    app:errorEnabled="true"
                    app:errorIconTint="@color/danger"
                    app:errorTextAppearance="@style/errorAppearance"
                    app:errorTextColor="@color/danger">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etRutLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/dmsans_medium"
                        android:hint="@string/itRut"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itLoginPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/inputCornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/inputCornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/inputCornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/inputCornerRadius"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordLoginMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dmsans_medium"
                        android:hint="@string/itPassword"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEnterLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btnHeight"
                    android:layout_marginTop="24dp"
                    android:text="@string/btnEnterLogin" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRecoverPassLogin"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btnHeight"
                    android:layout_marginTop="24dp"
                    android:text="@string/btnRecoverPass" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/skyBlue"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="0dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCreateAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="28dp"
                            android:gravity="center_horizontal"
                            android:text="@string/lbCreateAccount" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCreateAccount"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btnHeight"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="28dp"
                            android:text="@string/btnCreateAccount" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>